--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/j_reset.css">
     <link rel="stylesheet" href="css/style.css">
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 	<script src="js/jquery.browser.mobile.js"></script>
 </head>
@@ -117,7 +118,7 @@
                     </div>
                     <!--company-box-->
                     <div class="contact-box">
-                        <span>제휴문의</span>
+                        <span>제휴문의<i class="fas fa-chevron-up contact-open"></i></span>
                         <div class="send-box">
                             <input type="text" placeholder="제목">
                             <input type="email" placeholder="이메일">
