--- a/m/index.html
+++ b/m/index.html
@@ -222,7 +222,7 @@
 					$("body").css("padding-top", 0);
 				}
 				
-				if ( $( document ).scrollTop() > jbOffset2.top - header.height() ) {
+				if ( $( document ).scrollTop() > jbOffset2.top) {
 					appdownClone.addClass( 'fixed' );
 					appdownClone.css({
 						"bottom" : "0",
