--- a/m/index.html
+++ b/m/index.html
@@ -19,8 +19,8 @@
             <div class="inner clearfix">
                 <h1 class="logo">
                     <a href="javascript:;">
-                        <img src="images/logo.png" class="normal_logo" alt="">
-						<img src="images/logo_fixed.png" class="fixed_logo" alt="">
+                        <img src="images/logo.png" class="normal_logo" alt="zamface">
+						<img src="images/logo_fixed.png" class="fixed_logo" alt="zamface">
                     </a>
                 </h1>
                 <a href="#footer" class="header-nav">회사소개 / 제휴문의</a>
