--- a/m/index.html
+++ b/m/index.html
@@ -205,6 +205,12 @@
 		}
 		
 		$( document ).ready( function() {
+			// $(window).resize(function(){
+            //     if($(window).width() >= 1024){
+            //         location.href = "../index.html";
+            //     }   
+            // });
+
 			var header = $( 'header' );
 			var appdown = $("#appdown-wrap");
 			var appdownClone = appdown.clone().hide();
